@@ -4,6 +4,12 @@ $Id$
 
 ChangeLog
 
+2009-05-08
+	- if the "uri" parameter is included, resolve by the given URI, which is done 
+	  via a SPARQL query that depends on the "form" parameter. If form is "html" 
+	  or "csv" a SELECT query, otherwise, for "owl", "rdf", "n3", a CONSTRUCT query.
+	  The sparql dispatcher has been updated to handle these possible formats.
+	
 2009-05-07
 	- MmiUri(String): prevent NPE when there is no path in the URI
 	
